Added unit test for json list